# test_package_dep

.github/workflows/: main.yml
test-adding-deps-from-github/: pyproject.toml
test-adding-deps-from-github/test_adding_deps_from_github/: __init__.py
